--- a/index.html
+++ b/index.html
@@ -342,11 +342,13 @@
                             <img src="Assets/9.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center bgc">
-                        <div class="textbox">
-                            <h1><span>Support</span> good food and local business.</h1>
-                            <div class="btn">
-                                <h2>Order Now</h2>
+                    <div class="col-md-6">
+                        <div class="box">
+                            <div class="textbox">
+                                <h1><span>Support</span> good food and local business.</h1>
+                                <div class="btn">
+                                    <h2>Order Now</h2>
+                                </div>
                             </div>
                         </div>
                     </div>
